2020-09-27 Jan Kotanski <jan.kotanski@desy.de>
	* add configuration path, organization and domain to command-line parameters
	* implement configuration for intensity
	* tagged as 2.48.0

2020-09-17 Jan Kotanski <jan.kotanski@desy.de>
	* add configuration of specialized tools
	* implement configuration for 1d-plot
	* add legend to 1d-plot
	* tagged as 2.47.0

2020-09-15 Jan Kotanski <jan.kotanski@desy.de>
	* split tests as a workaround for theading problem
	* tagged as 2.46.1

2020-09-14 Jan Kotanski <jan.kotanski@desy.de>
	* add a buffer for diffractograms
	* rename polarscale to toolscale
	* add mapping of images from different sources to color channels
	* split tests as a workaround for threading problem
	* tagged as 2.46.0

2020-09-03 Janf Kotanski <jan.kotanski@desy.de>
	* fix multi-source mode for 1D image sources
	* tagged as 2.45.2

2020-09-02 Janf Kotanski <jan.kotanski@desy.de>
	* fix for acceleration of memory buffer sum
	* tagged as 2.45.1

2020-09-01 Janf Kotanski <jan.kotanski@desy.de>
	* accelerate memory buffer sum
	* tagged as 2.45.0

2020-08-14 Janf Kotanski <jan.kotanski@desy.de>
	* add Filters widget help
	* tagged as 2.44.4

2020-08-12 Jan Kotanski <jan.kotanski@desy.de>
	* update ROI help
	* tagged as 2.44.3

2020-08-06 Jan Kotanski <jan.kotanski@desy.de>
	* add possibility of negative frames to nexus file source configuration
	* change order of widgets in nexus file image source
	* tagged as 2.44.2

2020-08-04 Jan Kotanski <jan.kotanski@desy.de>
	* update NeXus File image source help
	* tagged as 2.44.1

2020-07-31 Jan Kotanski <jan.kotanski@desy.de>
	* add a frame widget to NeXus File image source
	* fix passing sourceStateChanged signal
	* add link to the changelog file in LaVue help
	* tagged as 2.44.0

2020-07-28 Jan Kotanski <jan.kotanski@desy.de>
	* add tests for Tango File image source
	* add tests for Hidra image source
	* add tests for Http image source
	* add tests for PyTine image source
	* add tests for Epics image source